--- a/templates/sites.html
+++ b/templates/sites.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>My App</title>
 </head>
+
 <body>
     <h1>Content</h1>
-    <ul>
-    {% for row in sites %}
-        <li>{{ row['Date'] }}, <strong>{{ row['Name'] }}</strong>, {{ row['URL'] }}, {{ row['content'] }}</li>
-    {% endfor %}
-    </ul>
+
+    <div class="article">
+
+
+        <ul>
+
+
+
+            {% for row in sites %}
+            <li>{{ row['Date'] }}, <strong>{{ row['Name'] }}</strong>, <button class="read-more-button">阅读全文</button><br/>
+                {{ row['URL'] }},
+                <p class="excerpt">{{row['content'][0:200] }}</p>
+                <p class="content" style="display: none;">{{row['content'] }}</p>
+                
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
+<style>
+    .article .content {
+        display: none;
+    }
+</style>
+<script>
+    const readMoreButtons = document.querySelectorAll('.read-more-button');
+    readMoreButtons.forEach(button => {
+        button.addEventListener('click', () => {
+            const article = button.parentNode;
+            const excerpt = article.querySelector('.excerpt');
+            const content = article.querySelector('.content');
+            if (content.style.display === 'none') {
+                content.style.display = 'block';
+                excerpt.style.display = 'none';
+                button.textContent = '收起全文';
+            } else {
+                content.style.display = 'none';
+                excerpt.style.display = 'block';
+                button.textContent = '阅读全文';
+            }
+        });
+    });
+</script>
+
 </html>
